--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "dependencies": {
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.4.0"
   },
   "scripts": {
-    "run": "npx ts-node src/index.ts",
+    "run": "npm run eslint && npx ts-node src/index.ts",
     "test": "npx jest",
-    "test:watch": "npx jest --watchAll"
+    "test:watch": "npx jest --watchAll",
+    "eslint": "npx eslint ."
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "jest": "^27.4.7",
-    "ts-jest": "^27.1.3"
+    "@types/jest": "~27.4.0",
+    "@typescript-eslint/eslint-plugin": "~5.10.1",
+    "@typescript-eslint/parser": "~5.10.1",
+    "eslint": "~8.8.0",
+    "eslint-config-prettier": "~8.3.0",
+    "eslint-plugin-jest": "~26.0.0",
+    "jest": "~27.4.7",
+    "jest-runner-eslint": "~1.0.0",
+    "ts-jest": "~27.1.3",
+    "typescript": "~4.5.5"
   }
 }
